--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,12 @@
 version: "3.9"
 services:
     poc-core-db:
-        image: postgres
+        image: postgres:16
         environment:
             POSTGRES_USER: valtimo
             POSTGRES_PASSWORD: valtimo
         ports:
             - "15432:5432"
-
-    # To fix 'Out of sort memory, consider increasing server sort buffer size' adjust value of 'sort-buffer-size'
-#    poc-core-db:
-#        image: mysql:8-oracle
-#        cap_add:
-#            - SYS_NICE  # CAP_SYS_NICE
-#        command:
-#            --collation-server=utf8mb4_unicode_ci
-#            --default-authentication-plugin=mysql_native_password
-#            --information-schema-stats-expiry=0
-#            --innodb-flush-method=O_DIRECT
-#            --lower-case-table-names=1
-#            --sort-buffer-size=5M
-#            --sql-mode=NO_ENGINE_SUBSTITUTION
-#        ports:
-#            - "3306:3306"
-#        environment:
-#            MYSQL_ROOT_PASSWORD: password
-#            MYSQL_DATABASE: valtimo-core
-#            MYSQL_USER: valtimo
-#            MYSQL_PASSWORD: password
-#        volumes:
-#            - valtimo-core-db-data:/var/lib/mysql # persist data even if container shuts down
 
     poc-core-keycloak-db:
         image: mysql:8-oracle
@@ -71,6 +48,16 @@ services:
         command: [ "start --import-realm" ]
         volumes:
             - ./docker/keycloak:/opt/keycloak/data/import/
+
+    poc-rabbitmq:
+        image: rabbitmq:3-management
+        container_name: poc-rabbitmq
+        volumes:
+            - ./docker/imports/poc-rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf:ro
+            - ./docker/imports/poc-rabbitmq/definitions.json:/etc/rabbitmq/definitions.json:ro
+        ports:
+            - "5672:5672"
+            - "15672:15672"
 
 volumes:
     poc-core-db-data: #enabled persistence
